# discord-transcription

./: .env.example  .gitignore  CHANGELOG.md  README.md
app/: pyproject.toml  requirements.txt
app/cronista/: __init__.py  __main__.py  bot.py  commands.py  config.py  end_session.py  session.py  session_manager.py  webhook.py
app/cronista/recording/: sink.py  speaking_log.py  storage.py
app/tests/unit/: test_sink.py  test_storage.py  test_webhook.py
deploy/: cronista.service  whisper-service.service
docs/: PRD-bot-cronista-transcricao.md  PRD-bot-cronista-transcricao_v2.md  PRD-whisper-service.md
specs/001-voice-capture-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-capture-bot/checklists/: implementation-validation.md  requirements.md
specs/002-python-pycord-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
spike/: record_smoke.py
whisper-service/: .env.example  README.md  data-model.md  plan.md  pyproject.toml  quickstart.md  requirements.txt  research.md  spec.md  tasks.md
whisper-service/checklists/: implementation-validation.md  requirements.md
whisper-service/contracts/: api.md  health-response.schema.json  n8n-integration.md  transcribe-request.schema.json  transcribe-response.schema.json
whisper-service/tests/: conftest.py
whisper-service/tests/unit/: test_config.py  test_health.py  test_paths.py  test_transcribe.py
whisper-service/whisper_service/: __init__.py  __main__.py  config.py  main.py  paths.py  schemas.py  transcriber.py
(+11 files in other folders)
